# cloudinit_builder

./: .gitignore  Cloudinit_builder.json  Dockerfile  README.md  app.py  docker-compose.yaml  notes.txt  pyproject.toml
cloudinit_builder/: __init__.py  builder.py  iso.py  late_users.py  options.py  passwords.py  paths.py  persistence.py  seed_io.py
initial/: meta-data.sample  user-data.sample
templates/: index.html
tests/: __init__.py  test_app.py  test_builder.py  test_iso.py  test_late_users.py  test_paths.py  test_persistence.py
